cluster domain east cluster-h625z.h625z.sandbox613.opentlc.com

--- a/acm-managed-cluster-template.yaml
+++ b/acm-managed-cluster-template.yaml
@@ -65,7 +65,7 @@
 # ---------------------------------------------------------------------------
 
 ---
-# Example: East managed cluster (cluster-s6krm.s6krm.sandbox3480.opentlc.com)
+# Example: East managed cluster (cluster-h625z.h625z.sandbox613.opentlc.com)
 apiVersion: cluster.open-cluster-management.io/v1
 kind: ManagedCluster
 metadata:
