--- a/docs/argocd-cluster-secrets-manual.yaml
+++ b/docs/argocd-cluster-secrets-manual.yaml
@@ -43,7 +43,7 @@ metadata:
 type: Opaque
 stringData:
   name: east
-  server: https://api.cluster-s6krm.s6krm.sandbox3480.opentlc.com:6443
+  server: https://api.cluster-h625z.h625z.sandbox613.opentlc.com:6443
   config: '{"tlsClientConfig":{"insecure":true},"bearerToken":"<REPLACE_WITH_EAST_CLUSTER_TOKEN>"}'
 ---
 apiVersion: v1
